[metadata]
name = sphinx-togglebutton
version = attr: sphinx_togglebutton.__version__
description = Toggle page content and collapse admonitions in Sphinx.
long_description = file: README.md
long_description_content_type = text/markdown
author = Chris Holdgraf
author_email = choldgraf@berkeley.edu
url = https://github.com/executablebooks/sphinx-togglebutton
license = MIT License
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires =
    sphinx
    docutils

[options.extras_require]
sphinx =
    matplotlib
    numpy
    myst_nb
    sphinx_book_theme
    sphinx_design
    sphinx_examples

[options.package_data]
sphinx_togglebutton =
    _static/togglebutton.css
    _static/togglebutton.js
    _static/togglebutton-chevron.svg
    translations/README.md
    translations/_convert.py
    translations/jsons/*.json
    translations/locales/**/*
